--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,13 @@
     },
     "require": {
         "cakephp/plugin-installer": "*",
-        "sentry/sentry": "1.7.*",
-        "php": ">=7.0"
+        "sentry/sentry": "1.7.*"
     },
     "require-dev": {
-        "cakephp/cakephp": "~3.0"
+        "cakephp/cakephp": "~3.4",
+        "phpstan/phpstan": "^0.8",
+        "cakephp/cakephp-codesniffer": "^3.0",
+        "scherersoftware/coding-standard": "^3.0"
     },
     "autoload": {
         "psr-4": {
